# orchestral_tutti_chord_database

./: .gitignore  LICENSE  Pipfile  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
orchestral_tutti_chord_database/: __init__.py  color.py  parser.py  pitch.py
tests/: test_color.py  test_parser.py  test_pitch.py
