[tool.poetry]
name = "orchestral_tutti_chord_database"
version = "0.1.0"
description = "A database of sustained tutti chords in orchestral music."
authors = ["RCJacH <RCJacH@outlook.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/rcjach/orchestral_tutti_chord_database"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "\b"
python-ly = "^0.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
mypy = "^0.770"
tox = "^3.14.5"

[tool.isort]
line_length = 88
force_single_line = true
force_grid_wrap = 0
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
